--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "@reduxjs/toolkit": "^1.8.3",
     "next": "12.2.0",
+    "next-auth": "^4.8.0",
+    "next-redux-wrapper": "^7.0.5",
     "react": "18.2.0",
-    "react-currency-formatter": "^1.1.0",
     "react-dom": "18.2.0",
-    "react-responsive-carousel": "^3.2.23"
+    "react-redux": "^8.0.2",
+    "react-responsive-carousel": "^3.2.23",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
